# LeagueOfLingo

./: CMakeLists.txt  LeagueDictionary.cpp  LeagueDictionary.h  MainWindow.cpp  MainWindow.h  README.md  RiotApi.cpp  RiotApi.h  main.cpp
riot_cache/: NA1_5085407169.json  NA1_5085411657.json  NA1_5085420457.json  NA1_5085427224.json  NA1_5085433380.json  NA1_5085452053.json  NA1_5095807369.json  NA1_5095819886.json  NA1_5095821724.json  NA1_5141654513.json  NA1_5141673817.json  NA1_5141685371.json  NA1_5141696824.json  NA1_5141708803.json  NA1_5150220825.json
